WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33581
websocket/tests/worker/worker-simple.html crash on Leopard Intel Debug (Tests) builder
https://bugs.webkit.org/show_bug.cgi?id=33581
Summary
websocket/tests/worker/worker-simple.html crash on Leopard Intel Debug (Tests...
Fumitoshi Ukai
Reported
2010-01-13 00:36:23 PST
See detail for example:
http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r53175%20(9185)/websocket/tests/workers/worker-simple-stderr.txt
Looks workerContext ref counted error.
Attachments
Patch
(1.79 KB, patch)
2010-01-13 00:40 PST
,
Fumitoshi Ukai
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fumitoshi Ukai
Comment 1
2010-01-13 00:40:51 PST
Created
attachment 46432
[details]
Patch
Fumitoshi Ukai
Comment 2
2010-01-13 01:23:26 PST
Committed
r53182
: <
http://trac.webkit.org/changeset/53182
>
Fumitoshi Ukai
Comment 3
2010-01-13 01:24:31 PST
http://trac.webkit.org/changeset/53182
is just adding the crash test in Skipped.
David Levin
Comment 4
2010-01-13 11:05:12 PST
Comment on
attachment 46432
[details]
Patch The overall patch seems fine. It would be nice to explain just a little (in the changelog) why not doing this causes a crash.
Fumitoshi Ukai
Comment 5
2010-01-13 18:23:22 PST
Committed
r53226
: <
http://trac.webkit.org/changeset/53226
>
Fumitoshi Ukai
Comment 6
2010-01-13 18:46:53 PST
Committed
r53227
: <
http://trac.webkit.org/changeset/53227
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug