2010-01-13  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by David Levin.

        Fix websocket/tests/worker/worker-simple.html crash on Leopard Intel Debug (Tests) builder
        https://bugs.webkit.org/show_bug.cgi?id=33581

        unref m_workerContext when websocket is disconnected, so that avoid
        keeping reference to workerContext longer than worker thread runs.

        * websockets/WorkerThreadableWebSocketChannel.cpp:
        (WebCore::WorkerThreadableWebSocketChannel::Bridge::disconnect):
        (WebCore::WorkerThreadableWebSocketChannel::Bridge::waitForMethodCompletion):

git-svn-id: svn://svn.chromium.org/blink/trunk@53226 bbb929c8-8fbe-4397-9dbb-9b2b20218538