third_party/WebKit/WebCore/websockets/WorkerThreadableWebSocketChannel.cpp
@@ -331,6 +331,7 @@ void WorkerThreadableWebSocketChannel::Bridge::disconnect()
         m_peer = 0;
         m_loaderProxy.postTaskToLoader(createCallbackTask(&mainThreadDestroy, peer));
     }
+    m_workerContext = 0;
 }
 
 void WorkerThreadableWebSocketChannel::Bridge::clearClientWrapper()
@@ -346,6 +347,8 @@ void WorkerThreadableWebSocketChannel::Bridge::setMethodNotCompleted()
 
 void WorkerThreadableWebSocketChannel::Bridge::waitForMethodCompletion()
 {
+    if (!m_workerContext)
+        return;
     WorkerRunLoop& runLoop = m_workerContext->thread()->runLoop();
     MessageQueueWaitResult result = MessageQueueMessageReceived;
     ThreadableWebSocketChannelClientWrapper* clientWrapper = static_cast<ThreadableWebSocketChannelClientWrapper*>(m_workerClientWrapper.get());
